# StructuraLog

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
examples/: README.md  mock_producer.py
src/structura_log/: __init__.py  core.py
src/structura_log/contrib/: fastapi.py
tests/: test_configuration.py  test_fastapi_contrib.py  test_initialization.py  test_job_logger.py  test_log_format.py
