[project]
name = "structura_log"
version = "0.1.0"
description = "Una libreria di logging strutturato basata su python-json-logger."
dependencies = [
    "python-json-logger",
]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0,<9.0"
attrs = "*"
ruff = "^0.1.11"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "2.21.0"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
