[tool.poetry]
name = "structura_log"
version = "0.1.0"
description = "Una libreria di logging strutturato basata su python-json-logger."
authors = ["Your Name <you@example.com>"]  # <-- CAMBIA QUESTO!
readme = "README.md"
packages = [{include = "structura_log", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9"
python-json-logger = "*"

[tool.poetry.group.test.dependencies]
pytest = ">=8.0,<9.0"
attrs = "*"
ruff = "^0.1.11"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "2.21.0"
build = "^1.3.0"
twine = "^6.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
